2012-04-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-44
	* Set a timeout of 3 seconds for version checker.

2012-04-06 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-43
	* Software version checker
	- Alert the user of being running an experimental version of Confdb-GUI.
	- Point to real container.
	* Enable Python parser option.
	
2012-03-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-42
	* Fix bug #88643: Cannot save after editing Output Commands in EventContents.
	- Set the EventContent as "hasChanged".
	- Remove restriction in OutputCommand to load ModuleName property when the parentReference exists.
	* Remove senseless message of Operator check for Sequence HLTL1UnpackerSequence.
	* Fix condition for V00-00-00 cvsTag software Packages.
	- Error will be shown when a template cvstag is neither the expected tag nor V00-00-00 tag.
	
2012-03-29 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-41
	* Software version checker!
	- Alert the user about a new version of Confdb.

2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-40
	* Software version checker!
	- from now on the confdb version must be set in the file confdb.version
	  this file includes the contact email, confdb version and the URL to compare versions.
	- The project is prepared to deploy confdb.version file in the web container.
	- It shows a console message, it needs a panel alert the users.

2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-39
	* Set confdb version and contact info from confdb.version file.
	* Update build.xml to deploy confdb.version file in the web container. 
	
2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-38
	* Improvements in Jython parser.
	- Parse operators.
	- disable "Import from python" option in the MenuBar. (to deploy the app.)
	